# UnifiedSecurityScanner

./: .dockerignore  .gitignore  README.md  exlcude.txt
.github/workflows/: ci.yml
.msd/: ENTERPRISE_ARCHITECTURE.md  PHASE_GAP_AUDIT.md
adapters/bandit/: policy.yaml
adapters/brakeman/: policy.yaml
adapters/browser-probe/: policy.yaml
adapters/bundler-audit/: policy.yaml
adapters/cfn-lint/: policy.yaml
adapters/checkov/: policy.yaml  ruleset.yaml
adapters/composer-audit/: policy.yaml
adapters/detect-secrets/: policy.yaml
adapters/devskim/: policy.yaml
adapters/dotnet-audit/: policy.yaml
adapters/eslint/: policy.yaml
adapters/gitleaks/: policy.yaml  ruleset.yaml
adapters/gosec/: policy.yaml
adapters/grype/: policy.yaml
contracts/: adapter-interface.yaml
control-plane/: Dockerfile  go.mod
docs/: ENTERPRISE_ARCHITECTURE.md  LOCAL_UI_E2E_SCAN.md
ops/: build-worker-msvc.ps1  docker-compose.postgres.yml  docker-compose.ui.yml  start-local-e2e.ps1  start-production.ps1  test-worker-msvc.ps1
platform-services/: Dockerfile  README.md  component.yaml  go.mod
risk-engine/: Dockerfile  component.yaml  go.mod
schemas/: canonical-finding.schema.json
ui/: .env.example  Dockerfile  README.md  component.yaml  index.html  nginx.conf  nginx.prod.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  (+4 more)
worker-runtime/crates/uss-worker/: Cargo.toml  Dockerfile  build.rs
worker-runtime/crates/uss-worker/src/: adapter.rs  executors.rs  lib.rs  main.rs
worker-runtime/crates/uss-worker/tests/: worker_binary.rs
(+290 files in other folders)
